--- a/Criando Layouts/CSS/style.css
+++ b/Criando Layouts/CSS/style.css
@@ -1,22 +1,44 @@
-.container{
-    background-color: #555;
+.exemplo{
+    display: none;
 }
 
 .container-fluid{
     background-color: #999;
+    display: none;
 }
 
 .container-sm{
     border: 2px solid blue;
     margin-bottom: 30px;
+    display: none;
 }
 
 .container-md{
     border: 2px solid crimson;
     margin-bottom: 30px;
+    display: none;
 }
 
 .container-lg{
     border: 2px solid chocolate;
     margin-bottom: 30px;
+    display: none;
+}
+
+.container{
+    border: 5px dotted blue;
+    padding: 10px
+}
+
+.row{
+    border: 2px solid purple;
+    height:100px;
+    padding: 10px;
+    margin: 5px;
+}
+
+.col{
+    border: 2px dashed red;
+    height: 100%;
+    margin: 0px 5px;
 }
