--- a/Criando Layouts/CSS/style.css
+++ b/Criando Layouts/CSS/style.css
@@ -27,18 +27,19 @@
 
 .container{
     border: 5px dotted blue;
-    padding: 10px
+    padding: 10px;
+    height: 300px;
 }
 
 .row{
     border: 2px solid purple;
-    height:100px;
+    height:100%;
     padding: 10px;
     margin: 5px;
 }
 
-.col{
+.col, .col-2, .col-6{
     border: 2px dashed red;
-    height: 100%;
+    height: 70px;
     margin: 0px 5px;
 }
