--- a/Projeto Art/CSS/style.css
+++ b/Projeto Art/CSS/style.css
@@ -68,3 +68,57 @@ a, i{
 #navbar a:hover{
     color: #c1b696;
 }
+
+/* MAIN IMAGE */
+
+.main-image{
+    height: 400px;
+    background-image: url("../img/g_1.jpg");
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.main-image-info{
+    background-color: #fff;
+    padding: 25px;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+}
+
+/* GALLERY */
+
+#img2{
+    background-image: url("../img/g_2.jpg")
+}
+
+#img3{
+    background-image: url("../img/g_3.jpg")
+}
+
+#img4{
+    background-image: url("../img/g_4.jpg")
+}
+
+#img5{
+    background-image: url("../img/g_5.jpg")
+}
+
+#img6{
+    background-image: url("../img/g_6.jpg")
+}
+
+#gallery-container h1{
+    text-align: center;
+}
+
+#gallery-container h1,
+#gallery-container .col-md-6,
+#gallery-container .col-12{
+    margin-bottom: 50px;
+}
+
+.small-image-container{
+    height: 250px;
+    margin-Bottom: 20px;
+}
